# balkon_quiz

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/app/: crud.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: questions.py  quiz.py  users.py
backend/app/core/: config.py  db.py  security.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  atoms.jsx  main.jsx  routeTree.gen.ts  style.css  utils.js
frontend/src/components/: navbar.jsx  question.jsx  quizCard.jsx  userPanel.jsx
frontend/src/hooks/: useAuth.jsx
frontend/src/routes/: __root.jsx  index.jsx  login.jsx  register.jsx  session.jsx
frontend/src/routes/quiz/: $quizId.jsx  index.jsx
frontend/src/routes/quizzes/: index.jsx
